--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,25 +7,14 @@ license = "MIT OR Apache-2.0"
 description = "A low-power operating system kernel written in Rust for laptops"
 
 [lib]
-crate-type = ["staticlib"]
+crate-type = ["rlib"]
 
 [dependencies]
-# 부트로더 통합
-bootloader = { version = "0.11", features = ["map_physical_memory"] }
-
-# x86_64 아키텍처 지원
+bootloader_api = "0.11.12"
 x86_64 = "0.14"
-
-# 하드웨어 레지스터 접근
 volatile = "0.4"
-
-# 스핀락 구현
 spin = "0.9"
-
-# 시리얼 포트 통신
 uart_16550 = "0.2"
-
-# 힙 할당자 (초기 단계)
 linked_list_allocator = "0.10"
 
 [profile.dev]
@@ -43,3 +32,9 @@ debug = false
 [profile.test]
 panic = "abort"
 
+[build-dependencies]
+bootloader = "0.11.12"
+
+[[bin]]
+name = "simple_os"
+path = "src/main.rs"
