feat(power): add boot profiles, safer idle/scaling, and device power mgmt\n\n- Cargo features for profiles (balanced default; power_saver, performance, headless)\n- Default power policy per profile; idle uses deepest C-state with safe fallback\n- ATA: idle/standby with timeout, auto-resume on I/O; tunables\n- RTL8139: low-power RX stop on idle, auto-resume on activity\n- Framebuffer: display blanking after inactivity; unblank on input\n- GUI: event-driven redraw via compositor flag to reduce wakeups\n- Shell: add power commands (status/mode/display/disk idle)\n- Logging: add tiny ring buffer and panic dump for reliability\n- Docs/tests: power validation guide and checklist

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,16 @@ spin = "0.9"
 uart_16550 = "0.2"
 linked_list_allocator = "0.10"
 
+[features]
+# Boot profiles
+balanced = []
+power_saver = []
+performance = []
+headless = []
+
+# Default to balanced if no profile is chosen
+default = ["balanced"]
+
 [profile.dev]
 panic = "abort"
 opt-level = 0
