feat: Add OOM Killer, user activity detection, and battery management
- Implement OOM Killer for memory pressure handling
- Add user activity detection system
- Implement battery management
- Enhance memory management
- Improve error recovery
- Add device-specific power profiles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ fs = []
 gui = []
 touchpad = []
 smp = []
+usb = []
 
 # Default to balanced and enable all subsystems for current behavior
 default = ["balanced", "net", "fs", "gui", "touchpad", "smp"]
