Complete remaining 70–80% skeleton items: swap I/O via ATA, USB HID mouse report parsing (polling), EHCI control transfer (QH/qTD), HDA PCM playback (sine test), TLS RSA (BigInt) and basic cert verification. Also update evaluation doc.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,18 @@ smp = []
 usb = []
 audio = []
 
+# Storage / NIC / Security feature gates
+nvme = []
+net_r8168 = []
+tls_strict = []
+
+# Power feature gates
+power_saver = []
+intel_rapl = []
+
 # Default enable common subsystems; audio/usb are opt-in for footprint/power
-default = ["net", "fs", "gui", "touchpad", "smp"]
+# Enable tls_strict by default; nvme and r8168 are opt-in until drivers land
+default = ["net", "fs", "gui", "touchpad", "smp", "tls_strict"]
 
 [profile.dev]
 panic = "abort"
