--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ volatile = "0.4"
 spin = "0.9"
 uart_16550 = "0.2"
 linked_list_allocator = "0.10"
+bootloader = "0.11.12"
 
 [features]
 # Boot profiles (runtime-controlled now). Keep only headless for optional UI-less builds.
